・QMS ・Livet概要 ・IF NOT EXISTの注意まとめ ・R4応用で出たところまとめ ・整理

--- a/DB・SQL/SQLServer/テーブル構造.md
+++ b/DB・SQL/SQLServer/テーブル構造.md
@@ -2,15 +2,11 @@
 
 ---
 
-## テーブル構造を出力する
+## テーブル構造を出力するクエリ
 
-``` sql
+``` sql : とにかく全部吐き出す
 EXEC sp_help [Table];
 ```
-
----
-
-## テーブル構造を吐き出すクエリ
 
 ``` sql <https://kojimanotech.com/2020/09/13/252/>
 EXEC sp_columns @table_name = 'TableName';
