--- a/License/BasicInformation/午前/1.テクノロジ系/8.マルチメディア.md
+++ b/License/BasicInformation/午前/1.テクノロジ系/8.マルチメディア.md
@@ -188,8 +188,16 @@ shade : 影
 
 ### レイトレーシング
 
-3DCGを作成する時に必要となる陰影をつけるときに使われる手法で、観察者(物体を見ている目)から光源の経路を逆に追跡し、  
-算術演算によって物体表面の輝度を求める手法です。  
+[1]  
+3DCGを作成する時に必要となる陰影をつけるときに使われる手法で、観察者(物体を見ている目)から光源の経路を逆に追跡し、算術演算によって物体表面の輝度を求める手法です。  
+
+[2]  
+レイトレーシング法は、3DCGにおける陰線・陰面処理を行うためのアルゴリズムの一つです。  
+陰線・陰面処理とは、最も手前に見える線や面のみを表示し、それ以外を表示しないようにする処理手順です。  
+レイトレーシング法では、光源から放出され物体に反射して視点に到達する光線(レイ)を、逆に視点から物体へとさかのぼって追跡(トレース)し、物体での反射や透過、屈折による影響を計算することで、スクリーン上の画素ごとの表示値を決定します。  
+視点とスクリーン上の画素を結んだ直線が最初にぶつかった物体の色を表示するというのが基本的な考え方です。  
+
+スクリーンの全ての画素について，視線と描画の対象となる物体との交点を反射属性や透明属性なども含めて計算し，その中から視点に最も近い交点を選択する。  
 
 ### ラジオシティ法
 
