勉強したい内容追加 ・ONとWHERE

--- a/DB・SQL/結合関係.md
+++ b/DB・SQL/結合関係.md
@@ -141,3 +141,30 @@ FROM
 WHERE
     テーブル2.Y IS NULL AND
 ```
+
+---
+
+## ONに条件を載せるのと、普通にWHEREで条件を絞るのはどちらがいいのか？
+
+``` sql
+SELECT
+    a.name
+    , b.name
+FROM a
+    INNER JOIN b
+        ON a.b_cd = b.cd
+WHERE 
+    b.cd = '1'
+```
+
+``` sql
+SELECT
+    a.name
+    , b.name
+FROM a
+    INNER JOIN b
+        ON a.b_cd = b.cd
+        AND b.cd  = '1'
+```
+
+[テーブル結合についての備忘録 その2](https://qiita.com/mounntainn/items/2c5a568c98b7e9c38c6f)  
