・NFT ・fast-forward と not-fast-forward ・DDL,DML,DCL復習 ・整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -816,6 +816,38 @@ Vue.jsはサーバー機能はありません。
 
 ---
 
+## NFT (Non-Fungible Token：非代替性トークン)
+
+NFTとは、「偽造不可な鑑定書・所有証明書付きのデジタルデータ」のこと。  
+
+暗号資産（仮想通貨）と同じく、ブロックチェーン上で発行および取引される。  
+従来、デジタルデータは容易にコピー・改ざんができるため、現物の宝石や絵画などのような資産価値があるとはみなされなかった。  
+
+デジタルデータに電子透かしを入れるなどの方法はあったが、コピーや改ざんを直接防ぐ技術はこれまでなかった。  
+デジタルデータに唯一無二の価値を持たせることを可能にしたのがNFT。  
+
+従来は資産価値の付与が困難だったデジタルデータがNFTにより資産的価値と売買市場が形成されたことにより、アート界隈で注目を集めるようになった。  
+
+※Fungible
+代替可能
+ファンジブル
+
+### NFTと暗号資産は何が違うのか？イーサリアムとの関係は？
+
+NFTと暗号資産の違いは、端的に言えばトークンが代替性か非代替性かどうかということ。  
+暗号資産は、FT（Fungible-Token：代替性トークン）であり、資産個別の識別情報を無視して「〇〇万円分の資産価値を持ったデジタルデータ」として扱うことで、他の暗号資産や現金と交換できる。  
+つまり、暗号資産は代替可能なトークンだ。  
+
+一方、NFTは各作品の識別情報も踏まえて資産価値を与え、他の同等作品とは交換できない唯一無二の存在として扱う。  
+したがって、同じようなデータでもまったく異なるし、その金銭的な価値は相対取引によってのみ決まるケースも多い。  
+芸術作品などとの相性が良いのはこうした理由から。  
+
+[NFTとは何かをマンガでもわかりやすく解説、なぜデジタルデータに数億円の価値が付くのか？](https://www.sbbit.jp/article/fj/60992)  
+
+## メタバース
+
+---
+
 ・ADFS : ActiveDirectory Federation Service
 ・WAP : Wireless Application Protocol
 
