・メタバース ・SELECT TOP 1 ・スーパーバイザコール

--- a/DB・SQL/SQLServer/真偽値関係.md
+++ b/DB・SQL/SQLServer/真偽値関係.md
@@ -7,11 +7,14 @@
 初見でびっくりしたのでまとめる。  
 `TOP 1 1`ってなんやねんと思ったけど、そういうことか。  
 
-1件でもあればよく、処理速度を挙げるためにTOP1。  
-で、1を取得するって意味で`TOP 1 1`。  
+`SELECT 1 FROM [Table]`  
+とすると、レコードの分だけ「1」が出力される。  
+1件だけあればいいので、「TOP 1」する。  
+
+1件もレコードがない場合は空白になるので、その場合はISNULLでキャッチできるので0とする。  
 
 ``` SQL
-SELECT ISNULL((SELECT TOP 1 1 FROM [Table] WHERE [Table].[Field] = 'hoge' ) , 0 )
+SELECT ISNULL((SELECT TOP 1 1 FROM [Table]) , 0 )
 ```
 
 ---
@@ -21,8 +24,7 @@ SELECT ISNULL((SELECT TOP 1 1 FROM [Table] WHERE [Table].[Field] = 'hoge' ) , 0 
 IsExist系の検索する時は、True,Falseだけわかればいいので、それをやる方法をまとめる。  
 COUNTが2以上の場合でもTrue扱いになる。
 CONVERT,BITとは。
-やってることは単純だが、補足が必要。
-後TOP1って必要あるのか？
+やってることは単純だが、補足が必要。  
 
 ``` SQL
 -- 1件の有無で判定は十分なのでTOP1する。
