・整理 ・Task.ContinueWith

--- a/License/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
+++ b/License/BasicInformation/午前/1.テクノロジ系/10.ネットワーク.md
@@ -920,8 +920,7 @@ toの相手とbccの相手の相互間で電子メールアドレスを知られ
 ### CGI(Common Gateway Interface)
 
 ユーザの入力した情報によって表示するWebページを変化させるなど、動的なWebページを作成するための仕組みです。  
-Webサーバにおいて，クライアントからの要求に応じてアプリケーションプログラムを実行して，その結果をWebブラウザに返すなどのインタラクティブなページを実現するために，  
-Webサーバと外部プログラムを連携させる仕組み。  
+Webサーバにおいて，クライアントからの要求に応じてアプリケーションプログラムを実行して，その結果をWebブラウザに返すなどのインタラクティブなページを実現するために，Webサーバと外部プログラムを連携させる仕組み。  
 CGIはどのプログラム言語を用いても作成できますが、実際にはPHPやPerlが多用されているようです。  
 
 ### URL(Uniform Resource Locator)
