・Linq文字列生成まとめ&整理 ・分母分子サンプル ・整理

--- a/DB・SQL/SQLServer/列追加.md
+++ b/DB・SQL/SQLServer/列追加.md
@@ -40,12 +40,12 @@ BEGIN TRY
     -- ④テンポラリテーブルからバックアップデータを復元
     INSERT INTO TBL_USER
     SELECT
-        Tmp.UserNo,
-        Tmp.Name,
+        UserNo,
+        [Name],
         0,
-        Tmp.Addr,
-        Tmp.Tel
-    FROM #Temp Tmp
+        Addr,
+        Tel
+    FROM #Temp
 
     -- ⑤テンポラリテーブルを削除
     DROP TABLE #Temp
@@ -97,7 +97,7 @@ BEGIN TRY
     )
 
     -- ②新テーブルへデータ投入
-    INSERT INTO [Dst_Table]()
+    INSERT INTO [Dst_Table]([filed1],[filed2]...)
     SELECT [filed] FROM [Src_Table]
 
     -- ③元テーブルの削除
