--- a/Programming/アルゴリズム/双方向連結リスト.md
+++ b/Programming/アルゴリズム/双方向連結リスト.md
@@ -267,16 +267,18 @@ using System.Collections.Generic;
 ``` C# : main
     static void Main(string[] args)
     {
-        var aa = new LinkedList<string>();
-        aa.InsertFirst("Node1");
-        aa.InsertLast("Node2");
+        var list = new LinkedList<string>();
+        list.InsertFirst("Node1");
+        list.InsertLast("Node2");
         
-        foreach (var item in aa)
+        foreach (var item in list)
         {
             Console.WriteLine(item);
         }
     }
 ```
+
+---
 
 ## new LinkedList()した時の状態
 
@@ -285,6 +287,8 @@ DummyNode
 prev  val  next
 Dummy null Dummy
 ```
+
+---
 
 ## InsertAfterの動作
 
@@ -317,7 +321,7 @@ Node1 null Node1 | Dummy Node1 Dummy
 ```
 
 ①`Node m = new Node(elem, n, n.Next);`  
-①を実行する事で前のノードがDummy、次のノードがNode1を指し示すノード(仮にNode2とする)を作る。  
+①を実行する事で前のノードがDummy、次のノードがNode1を指し示すノード:Node2を作成する。  
 
 ``` txt
 Node2
@@ -354,6 +358,8 @@ prev  val  next  | prev  val   next  | prev  val   next
 Node1 null Node2 | Dummy Node2 Node1 | Node2 Node1 Dummy
 ```
 
+---
+
 ## InsertBeforeの動作
 
 ``` C#
@@ -385,7 +391,7 @@ Dummy Node1 Dummy | Node1 null Node1
 ```
 
 ①`Node m = new Node(elem, n.Previous, n);`  
-①を実行する事で前のノードがNode1、次のノードがDummyを指し示すノード(仮にNode2とする)を作る。  
+①を実行する事で前のノードがNode1、次のノードがDummyを指し示すノード:Node2を作成する。  
 
 ``` txt
 Node2
