--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -188,9 +188,7 @@ C# send post
 
 ・外人の動画のやつまとめたい
 ・LPIC1のまとめ
-・最小限のAPIをたたいて結果を取得するサンプルが欲しい。
-・最小限のAPI側のサンプルを作りたい。
-・フロントはVueで実装したい。
+
 
 ・最小限のAccesser
 ・最小限のUtilやJsonから値を取得するサンプル
@@ -393,3 +391,6 @@ LINQ OrderBy 複数
 〆ダーティーリードあたりのロックの強度だったり、分離レベルだったりをまとめる。  
 
 〆・ASP.Net Core Web API + Vue axios 通信サンプル
+〆・最小限のAPIをたたいて結果を取得するサンプルが欲しい。
+〆・最小限のAPI側のサンプルを作りたい。
+〆・フロントはVueで実装したい。
