--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -881,7 +881,8 @@ for (int i = 1 ; i < 0 ; i++) {
 ・lru
 ・Bindingの書き方。プロパティ構文でプロパティに値を代入するやり方
 ・xaml,livetのエラー
-
+・実行計画のみかた
+・TransactionScopeの分散トランザクション
 
 
 left out join で右側が多かった時ってどうなる？
