双方向リスト整理

--- a/Programming/アルゴリズム/双方向連結リスト.md
+++ b/Programming/アルゴリズム/双方向連結リスト.md
@@ -1,4 +1,4 @@
-# 双方向連結リスト(Bidirectional LinkedList)
+# 双方向連結リスト(DoublyLinkedList)
 
 ---
 
@@ -430,4 +430,65 @@ Dummy Node1 Node2 | Node2 null Node1
 Node1             | Node2             | DummyNode
 prev  val   next  | prev  val   next  | prev  val  next
 Dummy Node1 Node2 | Node1 Node2 Dummy | Node2 null Node1
+```
+
+---
+
+## Eraseの動作
+
+``` C#
+    /// <summary>
+    /// ノード n の自身を削除。
+    /// </summary>
+    /// <param name="n">要素の削除位置</param>
+    /// <returns>削除した要素の次のノード</returns>
+    public Node Erase(Node n)
+    {
+        if (n == this.dummy)
+        {
+            return this.dummy;
+        }
+        n.Previous.Next = n.Next;
+        n.Next.Previous = n.Previous;
+        return n.Next;
+    }
+```
+
+現在のノード状況が以下のような場合にNode2をEraseした状況を図解する。
+
+``` txt
+Node1             | Node2             | DummyNode
+prev  val   next  | prev  val   next  | prev  val  next
+Dummy Node1 Node2 | Node1 Node2 Dummy | Node2 null Node1
+```
+
+①`n.Previous.Next = n.Next;`  
+nはNode2。n.PreviousはNode1を指し示している。  
+n.Previous.NextはNode1のNextを参照することを意味し、Node1.NextはNode2を参照しているので、ここをNode2の次であるDymmyを参照するようにする。  
+
+``` txt
+Node1             | Node2             | DummyNode
+prev  val   next  | prev  val   next  | prev  val  next
+Dummy Node1 Dummy | Node1 Node2 Dummy | Node2 null Node1
+             ↑
+```
+
+②`n.Next.Previous = n.Previous;`  
+nはNode2。n.NextはDummyを指し示している。  
+n.Next.PreviousはDummyのPreviousを参照することを意味し、Dummy.PreviousはNode2を参照しているので、ここをNode2の前であるNode1を参照するようにする。  
+
+``` txt
+Node1             | Node2             | DummyNode
+prev  val   next  | prev  val   next  | prev  val  next
+Dummy Node1 Dummy | Node1 Node2 Dummy | Node1 null Node1
+                                         ↑
+```
+
+この時点でNode2への参照は全て失われた。  
+結果、Node2を削除したものとみなせる。  
+
+``` txt
+Node1              | DummyNode
+prev  val   next   | prev  val  next
+Dummy Node1 Dummy  | Node1 null Node1
 ```
