・双方向リスト概要まとめ ・イベントまとめ ・null許容演算子について

--- a/Programming/アルゴリズム/双方向連結リスト.md
+++ b/Programming/アルゴリズム/双方向連結リスト.md
@@ -1,22 +1,90 @@
 # 双方向連結リスト(DoublyLinkedList)
 
+[未確認飛行C](https://ufcpp.net/study/algorithm/col_blist.html)  
+
 ---
 
 ## 概要
 
-- 自分自身の値  
-- 自分自身のアドレス  
-- 次のアドレス  
+[e-Words]  
+>双方向リストとは、基本的なデータ構造の一つである線形リスト（linear linked list）のうち、各要素が自分の「次」と「前」の要素へのリンクを持ち、先頭側から末尾側へも、逆方向にも要素をたどっていくことができるもの。  
 
-[未確認飛行C](https://ufcpp.net/study/algorithm/col_blist.html)  
+``` txt
+        Node              Node              Node
+← Prev Value Next ↔ Prev Value Next ↔ Prev Value Next →
+```
 
 ---
 
-## コード
+## 特徴
 
-[未確認飛行C](https://ufcpp.net/study/algorithm/col_blist.html)  
+利点  
 
-ここを参考にインデクサーによる検索処理を追加した。  
+- 「片方向連結リスト」と同様に、常に要素数分のメモリだけ確保しておける。  
+- あるノードの直後および直前に新しい要素を挿入する場合、一定時間（O(1)）で行える。  
+- あるノードの削除を一定時間（O(1)）で行える。  
+
+欠点  
+
+- 「片方向連結リスト」と同様に、リスト中の要素にランダムアクセスできない。  
+- 「片方向連結リスト」と比べて、ちょっとだけ余分にメモリが必要。  
+- 先頭から順に、あるいは末尾から逆順にしか要素にアクセスできない。  
+- 「あるノード前後への挿入・削除が O(1)」といっても、そのノードを探してくる操作自体は O(n)。  
+
+- 要素の検索には時間がかかるものの、 挿入・削除が高速  
+  →名簿等、文字通りのリスト管理にはこの双方向連結リストがよく使われる。  
+- 単にリストとか連結リストという言葉で双方向連結リストを指す場合もある。  
+  - C++ → STL では双方向連結リストが単に list  
+  - C# → LinkedList  
+
+---
+
+## ノードの実装
+
+前のノード、ノードが保持する値、次のノードを実装する。  
+
+internal : 同じアセンブリならアクセスできる  
+※アセンブリ:exeやdllのこと。同じアセンブリとは同じプロジェクトのこと。  
+
+``` C# : Node
+    /// <summary>
+    /// 連結リストのノード
+    /// </summary>
+    public class Node
+    {
+        /// <summary>
+        /// 格納している値
+        /// </summary>
+        public T Value { get; set; }
+
+        /// <summary>
+        /// 次のノード
+        /// </summary>
+        public Node Next { get; internal set; }
+
+        /// <summary>
+        /// 前のノード
+        /// </summary>
+        public Node Previous { get; internal set; }
+
+        /// <summary>
+        /// コンストラクタ
+        /// </summary>
+        /// <param name="val"></param>
+        /// <param name="prev"></param>
+        /// <param name="next"></param>
+        internal Node(T val, Node prev, Node next)
+        {
+            Value = val;
+            Previous = prev;
+            Next = next;
+        }
+    }
+```
+
+---
+
+## 双方向リストの実装
 
 ``` C# : LinkedList
 using System.Collections.Generic;
@@ -70,28 +138,6 @@ using System.Collections.Generic;
                     ++i;
                 }
                 return i;
-            }
-        }
-
-        /// <summary>
-        /// インデクサー
-        /// </summary>
-        /// <param name="index"></param>
-        /// <returns></returns>
-        public Node this[int index]
-        {
-            get
-            {
-                int i = 0;
-                for (Node n = this.First; n != this.End; n = n.Next)
-                {
-                    ++i;
-                    if (i == index)
-                    {
-                        return n;
-                    }
-                }
-                return null;
             }
         }
         #endregion
@@ -210,59 +256,6 @@ using System.Collections.Generic;
         System.Collections.IEnumerator System.Collections.IEnumerable.GetEnumerator()
         {
             return this.GetEnumerator();
-        }
-        #endregion
-
-
-        #region Nodeクラス
-        /// <summary>
-        /// 連結リストのノード。
-        /// </summary>
-        public class Node
-        {
-            T val;
-            Node prev;
-            Node next;
-
-            /// <summary>
-            /// 格納している要素を取得。
-            /// </summary>
-            public T Value
-            {
-                get { return this.val; }
-                set { this.val = value; }
-            }
-
-            /// <summary>
-            /// 次のノード。
-            /// </summary>
-            public Node Next
-            {
-                get { return this.next; }
-                internal set { this.next = value; }
-            }
-
-            /// <summary>
-            /// 前のノード。
-            /// </summary>
-            public Node Previous
-            {
-                get { return this.prev; }
-                internal set { this.prev = value; }
-            }
-
-            /// <summary>
-            /// コンストラクタ
-            /// </summary>
-            /// <param name="val"></param>
-            /// <param name="prev"></param>
-            /// <param name="next"></param>
-            internal Node(T val, Node prev, Node next)
-            {
-                this.val = val;
-                this.prev = prev;
-                this.next = next;
-            }
         }
         #endregion
     }
