双方向リスト概要整理

--- a/Programming/アルゴリズム/双方向連結リスト.md
+++ b/Programming/アルゴリズム/双方向連結リスト.md
@@ -41,7 +41,8 @@
 
 ## ノードの実装
 
-前のノード、ノードが保持する値、次のノードを実装する。  
+双方向リストを実現するための要素として、ノードを実装する必要がある。  
+概要の通り、「前のノード」、「ノードが保持する値」、「次のノード」を表現できるように実装する。  
 
 internal : 同じアセンブリならアクセスできる  
 ※アセンブリ:exeやdllのこと。同じアセンブリとは同じプロジェクトのこと。  
@@ -84,200 +85,204 @@ internal : 同じアセンブリならアクセスできる
 
 ---
 
-## 双方向リストの実装
+## ダミーノード
 
-``` C# : LinkedList
-using System.Collections.Generic;
+- 双方向連結リスト本体の実装では、リストの先頭ノードや末尾ノードを持つ代わりに、ダミー（有効な値を持たない）ノードを持つ実装方法が一般的。  
+- リストの先頭および末尾のノードは、それぞれ dummy.Next および dummy.Previous に格納する。  
+- 初期状態では、dummy.Next および dummy.Previous には dummy 自身の参照を入れておく。  
+- ダミーノードを使えば、 先頭・末尾への要素の挿入・削除を特別扱いする必要がなくなる。  
+- ダミーノード自身は、先頭よりも1つ前、末尾よりも1つ後ろに常に位置することになり、リストの終端判定に使う事ができる。  
+
+``` C#
+public class LinkedList<T> : IEnumerable<T>
+{
+    /// <summary>
+    /// ダミーノード
+    /// </summary>
+    private readonly Node dummy;
 
     /// <summary>
-    /// 双方向連結リスト。
+    /// リストの先頭ノード
     /// </summary>
-    /// <typeparam name="T">要素の型</typeparam>
-    public class LinkedList<T> : IEnumerable<T>
+    public Node First => dummy.Next;
+    /// <summary>
+    /// リストの末尾ノード
+    /// </summary>
+    public Node Last => dummy.Previous;
+    /// <summary>
+    /// リストの終端（末尾よりも後ろの番兵に当たるノード）
+    /// </summary>
+    public Node End => dummy;
+
+    /// <summary>
+    /// コンストラクタ
+    /// </summary>
+    public LinkedList()
     {
-        /// <summary>
-        /// ダミーノード
-        /// </summary>
-        private readonly Node dummy;
+        dummy = new Node(default, null, null);
+        dummy.Next = dummy;
+        dummy.Previous = dummy;
+    }
+}
+```
 
-        #region プロパティ
-        /// <summary>
-        /// リストの先頭ノード。
-        /// </summary>
-        public Node First
-        {
-            get { return this.dummy.Next; }
-        }
+---
 
-        /// <summary>
-        /// リストの末尾ノード。
-        /// </summary>
-        public Node Last
-        {
-            get { return this.dummy.Previous; }
-        }
+## ダミーノードの終端判定を利用したアクセス
 
-        /// <summary>
-        /// リストの終端（末尾よりも後ろの番兵に当たるノード）。
-        /// </summary>
-        public Node End
-        {
-            get { return this.dummy; }
-        }
+単純に先頭から値を参照していく  
 
-        /// <summary>
-        /// 要素の個数。
-        /// </summary>
-        public int Count
-        {
-            get
-            {
-                int i = 0;
-                for (Node n = this.First; n != this.End; n = n.Next)
-                {
-                    ++i;
-                }
-                return i;
-            }
-        }
-        #endregion
+``` C#
+for (Node n = this.First; n != this.End; n = n.Next)
+    _ = n.Value;
+```
 
-        #region コンストラクタ
-        /// <summary>
-        /// コンストラクタ
-        /// </summary>
-        public LinkedList()
-        {
-            this.dummy = new Node(default, null, null);
-            this.dummy.Next = this.dummy;
-            this.dummy.Previous = this.dummy;
-        }
-        #endregion
+カウントプロパティの実装  
+リストに含まれている要素数を求めるのは、 片方向連結リストと同様に、 前から順にノードをたどって数えるしかない。  
+※要素数を保持しておく変数を別に用意しておくという手はある  
 
-        #region 挿入・削除
-        /// <summary>
-        /// ノード n の後ろに新しい要素を追加。
-        /// </summary>
-        /// <param name="n">現在のノード(要素の挿入位置)</param>
-        /// <param name="elem">新しい要素</param>
-        /// <returns>新しく挿入されたノード</returns>
-        public Node InsertAfter(Node n, T elem)
+``` C#
+    public int Count
+    {
+        get
         {
-            // 前のポインタが現在のノードを指し示し、次のポインタが現在のノードの次のポインタを指し示すノードを作る
-            Node m = new Node(elem, n, n.Next);
-            // 現在のノードの次のノード。そのノードの前のノードに作成したノードを登録する。
-            n.Next.Previous = m;
-            // 現在のノードの次のノードに作成したノードを登録する。
-            n.Next = m;
-            // 作成したノードを返却する。
-            return m;
-        }
-
-        /// <summary>
-        /// ノード n の前に新しい要素を追加。
-        /// </summary>
-        /// <param name="n">現在のノード(要素の挿入位置)</param>
-        /// <param name="elem">新しい要素</param>
-        /// <returns>新しく挿入されたノード</returns>
-        public Node InsertBefore(Node n, T elem)
-        {
-            // 前のポインタが現在のノードの前のノードを指し示し、次のポインタが現在のノードを指し示すノードを作る
-            Node m = new Node(elem, n.Previous, n);
-            // 現在のノードの前のノード。そのノードの次のノードに作成したノードを登録する。
-            n.Previous.Next = m;
-            // 現在のノードの前のノードに作成したノードを登録する。
-            n.Previous = m;
-            // 作成したノードを返却する。
-            return m;
-        }
-
-        /// <summary>
-        /// 先頭に新しい要素を追加。
-        /// </summary>
-        /// <param name="elem">新しい要素</param>
-        /// <returns>新しく挿入されたノード</returns>
-        public Node InsertFirst(T elem)
-        {
-            // ダミーが常に先端になるので、ダミーの後に要素を追加するという意味になる。
-            return this.InsertAfter(this.dummy, elem);
-        }
-
-        /// <summary>
-        /// 末尾に新しい要素を追加。
-        /// </summary>
-        /// <param name="elem">新しい要素</param>
-        /// <returns>新しく挿入されたノード</returns>
-        public Node InsertLast(T elem)
-        {
-            // ダミーが常に終端になるので、ダミーの前に要素を追加するという意味になる。
-            return this.InsertBefore(this.dummy, elem);
-        }
-
-        /// <summary>
-        /// ノード n の自身を削除。
-        /// </summary>
-        /// <param name="n">要素の削除位置</param>
-        /// <returns>削除した要素の次のノード</returns>
-        public Node Erase(Node n)
-        {
-            if (n == this.dummy)
-            {
-                return this.dummy;
-            }
-            n.Previous.Next = n.Next;
-            n.Next.Previous = n.Previous;
-            return n.Next;
-        }
-
-        /// <summary>
-        /// 先頭の要素を削除。
-        /// </summary>
-        public void EraseFirst()
-        {
-            this.Erase(this.First);
-        }
-
-        /// <summary>
-        /// 末尾の要素を削除。
-        /// </summary>
-        public void EraseLast()
-        {
-            this.Erase(this.Last);
-        }
-        #endregion
-
-        #region IEnumerable<T> メンバ
-        public IEnumerator<T> GetEnumerator()
-        {
+            int i = 0;
             for (Node n = this.First; n != this.End; n = n.Next)
-                yield return n.Value;
+                ++i;
+            return i;
         }
-
-        System.Collections.IEnumerator System.Collections.IEnumerable.GetEnumerator()
-        {
-            return this.GetEnumerator();
-        }
-        #endregion
     }
 ```
 
-``` C# : main
-    static void Main(string[] args)
+インデクサーの実装  
+
+``` C#
+    public Node this[int index]
     {
-        var list = new LinkedList<string>();
-        list.InsertFirst("Node1");
-        list.InsertLast("Node2");
-        
-        foreach (var item in list)
+        get
         {
-            Console.WriteLine(item);
+            int i = 0;
+            for (Node n = this.First; n != this.End; n = n.Next)
+            {
+                ++i;
+                if (i == index)
+                    return n;
+            }
+            return null;
         }
     }
 ```
 
 ---
 
-## new LinkedList()した時の状態
+## リストへの要素の追加・削除
+
+``` C#
+    /// <summary>
+    /// ノード n の後ろに新しい要素を追加。
+    /// </summary>
+    /// <param name="n">現在のノード(要素の挿入位置)</param>
+    /// <param name="elem">新しい要素</param>
+    /// <returns>新しく挿入されたノード</returns>
+    public Node InsertAfter(Node n, T elem)
+    {
+        // 前のポインタが現在のノードを指し示し、次のポインタが現在のノードの次のポインタを指し示すノードを作る
+        Node m = new Node(elem, n, n.Next);
+        // 現在のノードの次のノード。そのノードの前のノードに作成したノードを登録する。
+        n.Next.Previous = m;
+        // 現在のノードの次のノードに作成したノードを登録する。
+        n.Next = m;
+        // 作成したノードを返却する。
+        return m;
+    }
+
+    /// <summary>
+    /// ノード n の前に新しい要素を追加。
+    /// </summary>
+    /// <param name="n">現在のノード(要素の挿入位置)</param>
+    /// <param name="elem">新しい要素</param>
+    /// <returns>新しく挿入されたノード</returns>
+    public Node InsertBefore(Node n, T elem)
+    {
+        // 前のポインタが現在のノードの前のノードを指し示し、次のポインタが現在のノードを指し示すノードを作る
+        Node m = new Node(elem, n.Previous, n);
+        // 現在のノードの前のノード。そのノードの次のノードに作成したノードを登録する。
+        n.Previous.Next = m;
+        // 現在のノードの前のノードに作成したノードを登録する。
+        n.Previous = m;
+        // 作成したノードを返却する。
+        return m;
+    }
+
+    /// <summary>
+    /// ノード n の自身を削除。
+    /// </summary>
+    /// <param name="n">要素の削除位置</param>
+    /// <returns>削除した要素の次のノード</returns>
+    public Node Erase(Node n)
+    {
+        if (n == this.dummy)
+        {
+            return this.dummy;
+        }
+        // 現在のノードの前のノード。そのノードの次のノードに自分自身の次のノードを登録する。
+        n.Previous.Next = n.Next;
+        // 現在のノードの次のノード。そのノードの前のノードに自分自身の前のノードを登録する。
+        n.Next.Previous = n.Previous;
+        return n.Next;
+    }
+```
+
+---
+
+## 先頭・末尾への要素の挿入・削除
+
+ダミーノードを使うことによって、 先頭・末尾への要素の挿入・削除は特別扱いする必要がない。  
+先頭や末尾にダミーノードを入れるだけ。  
+
+``` C#
+    /// <summary>
+    /// 先頭に新しい要素を追加。
+    /// </summary>
+    /// <param name="elem">新しい要素</param>
+    /// <returns>新しく挿入されたノード</returns>
+    public Node InsertFirst(T elem)
+    {
+        // ダミーが常に先端になるので、ダミーの後に要素を追加するという意味になる。
+        return InsertAfter(dummy, elem);
+    }
+
+    /// <summary>
+    /// 末尾に新しい要素を追加。
+    /// </summary>
+    /// <param name="elem">新しい要素</param>
+    /// <returns>新しく挿入されたノード</returns>
+    public Node InsertLast(T elem)
+    {
+        // ダミーが常に終端になるので、ダミーの前に要素を追加するという意味になる。
+        return InsertBefore(dummy, elem);
+    }
+
+    /// <summary>
+    /// 先頭の要素を削除。
+    /// </summary>
+    public void EraseFirst()
+    {
+        Erase(First);
+    }
+
+    /// <summary>
+    /// 末尾の要素を削除。
+    /// </summary>
+    public void EraseLast()
+    {
+        Erase(Last);
+    }
+```
+
+---
+
+## new LinkedList()した時のノードの状態 (初期状態)
 
 ``` txt
 DummyNode
@@ -441,7 +446,9 @@ Dummy Node1 Node2 | Node1 Node2 Dummy | Node2 null Node1
         {
             return this.dummy;
         }
+        // 現在のノードの前のノード。そのノードの次のノードに自分自身の次のノードを登録する。
         n.Previous.Next = n.Next;
+        // 現在のノードの次のノード。そのノードの前のノードに自分自身の前のノードを登録する。
         n.Next.Previous = n.Previous;
         return n.Next;
     }
@@ -485,3 +492,42 @@ Node1              | DummyNode
 prev  val   next   | prev  val  next
 Dummy Node1 Dummy  | Node1 null Node1
 ```
+
+---
+
+## EraseFirst・EraseLastの動作
+
+``` C#
+    /// <summary>
+    /// 先頭の要素を削除。
+    /// </summary>
+    public void EraseFirst()
+    {
+        Erase(First);
+    }
+
+    /// <summary>
+    /// 末尾の要素を削除。
+    /// </summary>
+    public void EraseLast()
+    {
+        Erase(Last);
+    }
+```
+
+このようなノードの状態において考える。  
+
+``` txt
+Node1             | Node2             | DummyNode
+prev  val   next  | prev  val   next  | prev  val  next
+Dummy Node1 Dummy | Node1 Node2 Dummy | Node2 null Node1
+```
+
+`First`は`Node First => dummy.Next;`  
+`dummy.Next`は`Node1`となる。  
+
+`Last`は`Node Last => dummy.Previous;`  
+`dummy.Previous`は`Node2`となる。  
+
+どちらも実質、Node1,Node2をEraseに渡すのと等しく、それ以降の処理はEraseの動作をトレースすればよい。  
+結果的に先頭、末尾の参照を削除することになる。  
