言葉の意味をまとめた程度

--- a/Japanese/言葉の意味.md
+++ b/Japanese/言葉の意味.md
@@ -133,3 +133,11 @@
 ビジネスメールなどで「五月雨式に申し訳ございません」と記載があった場合には報告や連絡などが一度のメールで送りきらずに、2通、3通、4通・・・と何度かに分けて送ることをお詫びすることを意味しています。  
 
 [五月雨式とは？「五月雨式に申し訳ございません」のメールの使い方とは？](https://business-textbooks.com/mail-samidareshiki/)  
+
+---
+
+## 敷衍 (ふえん)
+
+[google]  
+《名・ス他》  
+意味のわかりにくい所を、やさしく言い替えたり詳しく述べたりして説明すること。
