--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -881,10 +881,26 @@ MECEは、「Mutually Exclusive and Collectively Exhaustive」の頭文字を取
 
 ---
 
+## EBCDIC (Extended Binary Coded Decimal Interchange Code : エビシディック)
+
+[wiki]  
+EBCDIC (英語: Extended Binary Coded Decimal Interchange Code、エビシディック、拡張二進化十進コード) はIBMにより定義された8ビットのコード化文字セットである。  
+ASCII普及前の1963年に、BCD(Binary-coded decimal、二進化十進コード)を拡張する形で作られ、主にIBM系のメインフレームやオフィスコンピュータなどで使用されている。  
+
+---
+
 ## Amazon RDS (Amazon Relational Database Service : マネージドリレーショナルデータベース)
 
 [1]  
 AWS クラウド でリレーショナルデータベースを簡単にセットアップし、運用し、スケーリングすることのできるウェブサービスです。  
+
+---
+
+## VCS (Version Control System : バージョン管理システム)
+
+[e-Words]  
+バージョン管理システムとは、ファイルの変更履歴の保存・管理を行うソフトウェア。  
+管理下のファイルについて、過去の版の参照や、複数の版の比較、差分の検出などを行うことができる。  
 
 ---
 
@@ -1000,6 +1016,7 @@ gc.collect
 [ストップforeach！LINQで集合/結合する](https://qiita.com/i-tanaka730/items/3e6b560e80f1395ae8ea)  
 
 [RESTとGraphQLについて](https://www.utakata.work/entry/2019/12/02/000000)
+[Reference Source .NET Framework 4.8](https://referencesource.microsoft.com/#System.Web,namespaces)  
 
 最初の実行から条件が駄目なので実行はされない。
 
