・検索条件にマッチするデータが存在しない場合にデフォルト値を返す ・MAX関数 + CASE式 ・left out join で右側が多かった時ってどうなる？

--- a/DB・SQL/SQLServer/テーブル構造.md
+++ b/DB・SQL/SQLServer/テーブル構造.md
@@ -4,15 +4,33 @@
 
 ## テーブル構造を出力するクエリ
 
-``` sql : とにかく全部吐き出す
+とにかく全部吐き出す命令  
+[テーブル定義の表示](https://docs.microsoft.com/ja-jp/sql/relational-databases/tables/view-the-table-definition?view=sql-server-ver16)  
+
+``` sql
 EXEC sp_help [Table];
 ```
 
-``` sql <https://kojimanotech.com/2020/09/13/252/>
+---
+
+## カラムの情報を出力するクエリ
+
+[カラム構造を取得する【SQL Server】](https://kojimanotech.com/2020/09/13/252/)  
+
+``` sql
+EXEC sp_columns [Table];
+
 EXEC sp_columns @table_name = 'TableName';
 ```
 
-``` sql <https://lightgauge.net/database/sqlserver/3697/>
+---
+
+## プライマリキー(PK)を取得する
+
+[SQLServerでテーブルのプライマリキー(PK)を取得する(SQL編）](https://lightgauge.net/database/sqlserver/3697/)を参考にするなら、以下の構文で取得できるが、あまりに長すぎる。  
+[sp_help]でも確認できるのでここまでやる必要はないかも。  
+
+``` sql
 SELECT
      tbls.name AS table_name
     ,key_const.name AS constraint_name
