--- a/DB・SQL/サンプルデータ生成.md
+++ b/DB・SQL/サンプルデータ生成.md
@@ -1,5 +1,28 @@
 # サンプルデータ生成まとめ
 
+[これでわかった!? LEFT / RIGHT JOIN.](https://qiita.com/zaburo/items/548b3c40fee68cd1e3b7)  
+
+``` sql
+drop table if exists depts;
+create table depts(dept_id int primary key,dept_name varchar(32));
+insert into depts(dept_id,dept_name) values(1,'営業部');
+insert into depts(dept_id,dept_name) values(2,'経理部');
+insert into depts(dept_id,dept_name) values(3,'技術部');
+insert into depts(dept_id,dept_name) values(4,'法務部');
+
+drop table if exists employees;
+create table employees(dept_id int,name varchar(32));
+insert into employees(dept_id,name) values(1,'田中');
+insert into employees(dept_id,name) values(2,'玉木');
+insert into employees(dept_id,name) values(3,'鈴木');
+insert into employees(dept_id,name) values(3,'山本');
+insert into employees(dept_id,name) values(2,'斉藤');
+insert into employees(dept_id,name) values(1,'佐藤');
+insert into employees(dept_id,name) values(1,'小澤');
+insert into employees(dept_id,name) values(2,'関野');
+insert into employees(dept_id,name) values(0,'中村');
+```
+
 ## いつぞや
 
 ``` sql
