--- a/DB・SQL/結合関係.md
+++ b/DB・SQL/結合関係.md
@@ -4,24 +4,19 @@
 
 ## SQLの結合条件のON句の順番について
 
-<https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q11166323581>  
-
 SQLのLEFT JOIN とかのONの順番は関係無いらしい。  
 地味に知らなかったので、メモ。  
+
+[yahoo知恵袋](https://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q11166323581)  
 
 ---
 
 ## CROSS JOIN+WHERE と INNER JOIN
 
-<https://qiita.com/zaburo/items/548b3c40fee68cd1e3b7>  
-<https://stackoverflow.com/questions/17759687/cross-join-vs-inner-join-in-sql>  
-
-CROSS JOIN して WHERE で絞る方法(等価結合)とINNER JOINの結果は同じらしい。(厳密には内部処理的には違うらしいが)  
+CROSS JOIN して WHERE で絞る方法(等価結合)とINNER JOINの結果は同じらしい。(厳密な内部処理的には違うらしいが)  
 まぁ、CROSS JOINしてWHEREで絞るくらいなら素直にINNER JOIN使えって話。  
 
 ``` SQL
--- どちらも結果は同じになる
-
 -- CROSS JOIN + WHERE
 SELECT depts.dept_name,employees.name
 FROM depts,employees
@@ -32,6 +27,9 @@ SELECT depts.dept_name,employees.name
 FROM depts INNER JOIN employees
 WHERE depts.dept_id = employees.dept_id;
 ```
+
+<https://qiita.com/zaburo/items/548b3c40fee68cd1e3b7>  
+<https://stackoverflow.com/questions/17759687/cross-join-vs-inner-join-in-sql>  
 
 ---
 
@@ -168,3 +166,67 @@ FROM a
 ```
 
 [テーブル結合についての備忘録 その2](https://qiita.com/mounntainn/items/2c5a568c98b7e9c38c6f)  
+
+---
+
+## left out join で右側が多かった時ってどうなる？
+
+主体によって結果は変わるが、件数が多いテーブルの件数と同じになる。  
+左が少なくて、右が多くても、左に合わせて少なくなるわけではない。  
+左を主体にしつつ、可能な限りの結合を行い、存在しないものに関してはNULLとする。  
+
+因みに結合条件のテーブルの順番を変えても結果に影響はない。  
+あくまで主体とするテーブルがなんであるかが重要。  
+
+``` sql
+drop table if exists depts;
+create table depts(dept_id int primary key,dept_name varchar(32));
+insert into depts(dept_id,dept_name) values(1,'営業部');
+insert into depts(dept_id,dept_name) values(2,'経理部');
+insert into depts(dept_id,dept_name) values(3,'技術部');
+insert into depts(dept_id,dept_name) values(4,'法務部');
+
+drop table if exists employees;
+create table employees(dept_id int,name varchar(32));
+insert into employees(dept_id,name) values(1,'田中');
+insert into employees(dept_id,name) values(2,'玉木');
+insert into employees(dept_id,name) values(3,'鈴木');
+insert into employees(dept_id,name) values(3,'山本');
+insert into employees(dept_id,name) values(2,'斉藤');
+insert into employees(dept_id,name) values(1,'佐藤');
+insert into employees(dept_id,name) values(1,'小澤');
+insert into employees(dept_id,name) values(2,'関野');
+insert into employees(dept_id,name) values(0,'中村');
+```
+
+``` sql : 左が少ない
+select * from depts LEFT OUTER JOIN employees ON depts.dept_id = employees.dept_id
+select * from depts LEFT OUTER JOIN employees ON employees.dept_id = depts.dept_id
+
+-- id    name    id    name
+--  1  営業部     1    田中
+--  1  営業部     1    佐藤
+--  1  営業部     1    小澤
+--  2  経理部     2    玉木
+--  2  経理部     2    斉藤
+--  2  経理部     2    関野
+--  3  技術部     3    鈴木
+--  3  技術部     3    山本
+--  4  法務部  NULL    NULL
+```
+
+``` sql : 左が多い
+select * from employees LEFT OUTER JOIN depts ON employees.dept_id = depts.dept_id
+select * from employees LEFT OUTER JOIN depts ON depts.dept_id = employees.dept_id
+
+-- id    name   id       name
+--  1    田中    1     営業部
+--  2    玉木    2     経理部
+--  3    鈴木    3     技術部
+--  3    山本    3     技術部
+--  2    斉藤    2     経理部
+--  1    佐藤    1     営業部
+--  1    小澤    1     営業部
+--  2    関野    2     経理部
+--  0    中村  NULL      NULL
+```
