--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1018,6 +1018,8 @@ gc.collect
 [RESTとGraphQLについて](https://www.utakata.work/entry/2019/12/02/000000)
 [Reference Source .NET Framework 4.8](https://referencesource.microsoft.com/#System.Web,namespaces)  
 
+[【VB.NETプログラマーから見たPHP】foreachについて](https://vowlog.com/644/)  
+
 最初の実行から条件が駄目なので実行はされない。
 
 ``` C#
@@ -1038,4 +1040,3 @@ for (int i = 1 ; i < 0 ; i++) {
 
 UPDATEの時にCASE文使うときにELSE用意しない場合ってどういう挙動するんだ？
 割と謎。
-
