・C# インデクサ ・C# ディクショナリ ・php foreach ・sql window関数 ・sql 自己結合

--- a/DB・SQL/結合関係.md
+++ b/DB・SQL/結合関係.md
@@ -2,6 +2,40 @@
 
 ---
 
+## 自己結合(再帰結合)
+
+同じテーブル同士を結合すること  
+
+[逆引きSQL構文集](https://www.sql-reference.com/select/self_join.html)  
+
+``` txt : 従業員
+従業員コード  従業員名                  上司コード
+00001         チャーリー・ブラウン      <NULL>
+00002         ペパーミント・パティ      <NULL>
+00003         ルシール・ヴァン・ぺルト  00001
+00004         ライナス・ヴァン・ぺルト  00003
+00005         シュローダー              00001
+00006         マーシー                  00002
+```
+
+``` sql
+SELECT 部下.従業員コード, 部下.従業員名, 上司.従業員名 AS 上司の名前
+FROM 従業員 AS 部下
+JOIN 従業員 AS 上司 
+ON 部下.上司コード = 上司.従業員コード
+ORDER BY 部下.従業員コード
+```
+
+``` txt : 結果
+従業員コード  従業員名                  上司の名前
+00003         ルシール・ヴァン・ぺルト  チャーリー・ブラウン
+00004         ライナス・ヴァン・ぺルト  ルシール・ヴァン・ぺルト
+00005         シュローダー              チャーリー・ブラウン
+00006         マーシー                  ペパーミント・パティ
+```
+
+---
+
 ## SQLの結合条件のON句の順番について
 
 SQLのLEFT JOIN とかのONの順番は関係無いらしい。  
