PHP ・参考演算子 ・関数内関数 ・配列追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1043,3 +1043,5 @@ for (int i = 1 ; i < 0 ; i++) {
 
 UPDATEの時にCASE文使うときにELSE用意しない場合ってどういう挙動するんだ？
 割と謎。
+
+[有名企業のエンジニア向け研修資料まとめ](https://qiita.com/KNR109/items/f3268b311e11d5b821c0)  
