・整理 ・コールバック関数、可変関数 ・連番生成クエリ整理

--- a/SQL/Window/連番生成.md
+++ b/SQL/Window/連番生成.md
@@ -1,41 +1,102 @@
 # 連番生成
 
-[SQL で動的に連番テーブルを生成する](https://sql55.com/query/generate-sequence-number.php)  
-
-`sys.all_objects` はシステムオブジェクトやユーザーが定義したオブジェクト等を保持している、オブジェクトカタログビューで、SQL Server のコアなビューなので、バージョンがあがっても簡単になくなったりする心配はないと思います。  
-ですが、`sys.all_objects` のデフォルトのレコード数は、SQL Server のバージョンによっても違いますが、だいたい 2000 前後なので、あまり大きいを生成するのには使えませんので気をつけてください。  
+SQLServer前提で進める。  
 
 ---
 
-## 範囲で連番生成
+## 再帰クエリで生成
+
+共通テーブル式(CTE)を使うことで再帰問い合わせが可能になります。
 
 ``` sql
---  6  12
--- 12  18
--- 18  24
--- 24  30
-SELECT * FROM (
-    SELECT TOP (1000)
-        ROW_NUMBER() OVER (ORDER BY object_id) AS SeqNoFrom,
-        ROW_NUMBER() OVER (ORDER BY object_id)+6 AS SeqNoTo
-    FROM sys.all_objects
-    ORDER BY SeqNoFrom
-) AS rn_q
-WHERE rn_q.SeqNoFrom%6 = 0
+DECLARE @N INT = 10;
+
+WITH SeqTable AS (
+    SELECT 1 AS SEQ
+    UNION ALL
+    SELECT SEQ+1 FROM SeqTable WHERE SEQ < @N
+)
+SELECT SEQ FROM SeqTable OPTION(MAXRECURSION 32767);
 ```
 
+---
+
+## ROWNUMBER()で生成
+
 ``` sql
---  0     4
---  5     9
--- 10    14
--- 15    19
--- ~~~~~~~~
+DECLARE @MAX INT = 10;
+
+SELECT TOP(@MAX)
+    ROW_NUMBER() OVER (ORDER BY object_id) AS SEQ
+FROM sys.all_objects
+```
+
+`sys.all_objects` はシステムオブジェクトやユーザーが定義したオブジェクト等を保持している、オブジェクトカタログビュー(SQL Server のコアなビュー)  
+デフォルトのレコード数は、 大体2000前後(バージョンによる)らしい。  
+
+---
+
+## FromToの生成
+
+■**0からスタート and FromがToを含まないパターン**
+
+``` sql
+--  0   4
+--  5   9
+-- 10  14
+-- 15  19
+DECLARE @Range INT = 4;
+
 SELECT * FROM (
     SELECT TOP (1000)
         ROW_NUMBER() OVER (ORDER BY object_id)-1 AS SeqNoFrom,
-        ROW_NUMBER() OVER (ORDER BY object_id)+3 AS SeqNoTo
+        ROW_NUMBER() OVER (ORDER BY object_id)+@Range-1 AS SeqNoTo
     FROM sys.all_objects
     ORDER BY SeqNoFrom
 ) AS rn_q
-WHERE rn_q.SeqNoFrom%5 = 0
+WHERE rn_q.SeqNoFrom%(@Range+1) = 0;
 ```
+
+■**1からスタート and FromがToを含まないパターン**
+
+``` sql
+--  1   5
+--  6  10
+-- 11  15
+-- 16  20
+DECLARE @Range INT = 4;
+
+SELECT * FROM (
+    SELECT TOP (1000)
+        ROW_NUMBER() OVER (ORDER BY object_id) AS SeqNoFrom,
+        ROW_NUMBER() OVER (ORDER BY object_id)+@Range AS SeqNoTo
+    FROM sys.all_objects
+    ORDER BY SeqNoFrom
+) AS rn_q
+WHERE rn_q.SeqNoFrom%(@Range+1) = 1;
+```
+
+■**指定した数からスタート and FromがToを含むパターン**
+
+``` sql
+--  5  10
+-- 10  15
+-- 15  20
+-- 20  25
+DECLARE @Range INT = 5;
+
+SELECT * FROM (
+    SELECT TOP (1000)
+        ROW_NUMBER() OVER (ORDER BY object_id) AS SeqNoFrom,
+        ROW_NUMBER() OVER (ORDER BY object_id)+@Range AS SeqNoTo
+    FROM sys.all_objects
+    ORDER BY SeqNoFrom
+) AS rn_q
+WHERE rn_q.SeqNoFrom%@Range = 0;
+```
+
+---
+
+## 参考リンク
+
+[SQL で動的に連番テーブルを生成する](https://sql55.com/query/generate-sequence-number.php)  
