・php namespace use ・php クラス ・php 整理 ・頭痛+カフェイン ・第三セクター

--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -17,3 +17,13 @@
 >そして前153年から現1月に当たるJānuāriusが年始に設定されたことで結果的に順番が2つずつ後ろに動いたという感じです  
 
 ---
+
+## 頭痛にカフェイン
+
+>カフェインを摂取すると頭痛が治るケースは、実際にあるようです。  
+**カフェインには、脳の血管を収縮させる作用があります**。  
+そのため、脳の血管の拡張が原因で起こる「偏頭痛」という種類の頭痛には、カフェインが効く可能性があります。  
+しかし、痛の場合でも、カフェインを摂取しすぎると逆に頭痛がひどくなってしまうこともありますので、適切な量を摂ることが大切です。  
+カフェインには偏頭痛を根本的に治療する成分は含まれていない。  
+カフェインは症状がひどいときに緩和の目的で摂取する程度にとどめ、無理に自力で治そうとせずに医療機関に相談しましょう。  
+[健康ネット](https://www.mcsg.co.jp/kentatsu/health-care/18032)  
