--- a/Other/マルチメディア.md
+++ b/Other/マルチメディア.md
@@ -2,6 +2,26 @@
 
 ---
 
+## UI/UX
+
+- UX（ユーザーエクスペリエンス）  
+  - ユーザーがプロダクトやサービスを通して得られた体験を表す言葉。  
+  - 例)ユーザーが商品を購入し、また購入したいと思うまでの工程すべてが「ユーザー体験(UX)」として捉えられる。  
+  - アプリにおける良いUXの具体例
+    - 読み込み速度が早い  
+    - アプリ内の導線がわかりやすい（欲しい情報にすぐ辿り着ける）  
+    - 入力フォームでの手順がスムーズ  
+    - ユーザーの興味を掻き立てるグラフィック  
+
+- UI（ユーザーインターフェイス）  
+  - ユーザーとの間に現れるサービスやプロダクトの外観を表す言葉。  
+  - UIはUXの中に含まれている概念。  
+    ユーザーとの接点を表すUIは、 すべての顧客体験を表すUXの中に内包されているため。  
+
+[UX/UIとは？ 言葉の意味やUXとUIの違いをわかりやすく解説](https://monstar-lab.com/dx/solution/ux-ui/)  
+
+---
+
 ## JPEG (Joint Photographic Experts Group)
 
 >静止画像のデータ圧縮形式の一つ。  
